Remove extra deleteAll(). Because of that - GH build failed
(On GH - DAO test run before controller test, so last was failed because of out migrated records in DB)